add retry and Countdown

--- a/client/index.html
+++ b/client/index.html
@@ -33,11 +33,15 @@
       <thead>
         <tr>
           <th>ID</th>
-          <th>Status</th>
           <th>Task</th>
+          <th>Scheduled</th>
+          <th>Countdown</th>
+          <th>Picked</th>
+          <th>Started</th>
+          <th>Completed</th>
+          <th>Status</th>
+          <th>Actions</th>
         </tr>
-
-
       </thead>
       <tbody id="jobsTableBody"></tbody>
     </table>
